exception, error message examples

--- a/src/main/resources/static/article-edit.html
+++ b/src/main/resources/static/article-edit.html
@@ -7,16 +7,16 @@
     <meta name="robots" content="index, follow">
 
     <meta name="keyword" content="우아한테크코스, 프로그래밍, 개발자, 백엔드, 프론트엔드, Backend, Frontend, IOS, Android">
-    <meta name="description" id="metaDesc" content="우아한테크코스에서 개발자들을 위해 디자인된 교육을 수강해보세요.">
+    <meta name="description" resourceId="metaDesc" content="우아한테크코스에서 개발자들을 위해 디자인된 교육을 수강해보세요.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="우아한테크코스">
-    <meta property="og:description" id="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta property="og:description" resourceId="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta property="og:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta property="og:url" content="https://woowacourse.github.io/">
 
     <meta name="twitter:card" content="website">
     <meta name="twitter:title" content="우아한테크코스">
-    <meta name="twitter:description" id="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta name="twitter:description" resourceId="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta name="twitter:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta name="twitter:domain" content="https://woowacourse.github.io/">
 
@@ -50,7 +50,7 @@
                 </li>
             </ul>
             <ul class="nav-right">
-                <li id="header-user-dropdown-btn" class="user-profile dropdown no-border pointer">
+                <li resourceId="header-user-dropdown-btn" class="user-profile dropdown no-border pointer">
                     <a class="user-info-link user-dropdown-menu dropdown-toggle" data-toggle="dropdown">
                         <img class="profile-img img-fluid" src="https://avatars3.githubusercontent.com/u/46308949?s=460&v=4" alt="Brown">
                         <div class="user-info text-white">
@@ -94,12 +94,12 @@
             <div class="row">
                 <div class="col-lg-1 col-md-1"></div>
                 <div class="col-lg-10 col-md-10 col-sm-10">
-                    <input id="article-contents" name="contents" type="hidden">
-                    <div id="editSection"></div>
+                    <input resourceId="article-contents" name="contents" type="hidden">
+                    <div resourceId="editSection"></div>
                 </div>
                 <div class="col-lg-1 col-md-1">
                     <div class="btn-group btn-group-vertical">
-                        <button id="save-btn" type="submit" class="btn btn-default">
+                        <button resourceId="save-btn" type="submit" class="btn btn-default">
                             <i class="ti-save"></i>
                         </button>
                         <a href="/index.html" class="btn btn-default">
