--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -7,17 +7,17 @@
     <meta name="robots" content="index, follow">
 
     <meta name="keyword" content="우아한테크코스, 프로그래밍, 개발자, 개발블로그, 백엔드, 프론트엔드, Backend, Frontend, IOS, Android">
-    <meta name="description" id="metaDesc" content="우아한 크루의 개발 블로그입니다.">
+    <meta name="description" resourceId="metaDesc" content="우아한 크루의 개발 블로그입니다.">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="우아한테크코스">
-    <meta property="og:description" id="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta property="og:description" resourceId="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta property="og:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta property="og:url" content="https://woowacourse.github.io/">
 
     <meta name="twitter:card" content="website">
     <meta name="twitter:title" content="우아한테크코스">
-    <meta name="twitter:description" id="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta name="twitter:description" resourceId="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta name="twitter:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta name="twitter:domain" content="https://woowacourse.github.io/">
 
