--- a/src/main/resources/static/article.html
+++ b/src/main/resources/static/article.html
@@ -7,16 +7,16 @@
     <meta name="robots" content="index, follow">
 
     <meta name="keyword" content="우아한테크코스, 프로그래밍, 개발자, 백엔드, 프론트엔드, Backend, Frontend, IOS, Android">
-    <meta name="description" id="metaDesc" content="우아한테크코스에서 개발자들을 위해 디자인된 교육을 수강해보세요.">
+    <meta name="description" resourceId="metaDesc" content="우아한테크코스에서 개발자들을 위해 디자인된 교육을 수강해보세요.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="우아한테크코스">
-    <meta property="og:description" id="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta property="og:description" resourceId="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta property="og:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta property="og:url" content="https://woowacourse.github.io/">
 
     <meta name="twitter:card" content="website">
     <meta name="twitter:title" content="우아한테크코스">
-    <meta name="twitter:description" id="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta name="twitter:description" resourceId="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta name="twitter:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta name="twitter:domain" content="https://woowacourse.github.io/">
 
@@ -38,18 +38,18 @@
 </head>
 <body>
 <div>
-    <header id="header" class="header navbar bg-transparent no-border">
+    <header resourceId="header" class="header navbar bg-transparent no-border">
         <div class="header-container">
             <ul class="nav-left mrg-left-0">
                 <li>
                     <a href="index.html">
-                        <div id="logo-dark" class="logo logo-dark d-none" style="background-image: url('images/logo/logo_full_dark.png')"></div>
-                        <div id="logo-white" class="logo logo-white" style="background-image: url('images/logo/logo_full_white.png')"></div>
+                        <div resourceId="logo-dark" class="logo logo-dark d-none" style="background-image: url('images/logo/logo_full_dark.png')"></div>
+                        <div resourceId="logo-white" class="logo logo-white" style="background-image: url('images/logo/logo_full_white.png')"></div>
                     </a>
                 </li>
             </ul>
             <ul class="nav-right">
-                <li id="header-user-dropdown-btn" class="user-profile dropdown no-border pointer">
+                <li resourceId="header-user-dropdown-btn" class="user-profile dropdown no-border pointer">
                     <a class="user-info-link user-dropdown-menu dropdown-toggle" data-toggle="dropdown">
                         <img class="profile-img img-fluid" src="https://avatars3.githubusercontent.com/u/46308949?s=460&v=4" alt="Brown">
                         <div class="user-info text-white">
@@ -90,7 +90,7 @@
                 <a href="article-edit.html" class="float-right pointer btn btn-icon">
                     <i class="ti-pencil text-dark font-size-16 pdd-horizontal-5"></i>
                 </a>
-                <div id="viewerSection"></div>
+                <div resourceId="viewerSection"></div>
             </div>
             <div class="col-lg-10 col-md-10 col-sm-10 mx-auto">
                 <div class="profile-container row mrg-top-30 mrg-btm-30">
@@ -151,7 +151,7 @@
 
                     </ul>
                     <div class="add-comment">
-                        <div id="editSection"></div>
+                        <div resourceId="editSection"></div>
                     </div>
                 </div>
             </div>
