--- a/src/main/resources/static/mypage-edit.html
+++ b/src/main/resources/static/mypage-edit.html
@@ -7,16 +7,16 @@
     <meta name="robots" content="index, follow">
 
     <meta name="keyword" content="우아한테크코스, 프로그래밍, 개발자, 백엔드, 프론트엔드, Backend, Frontend, IOS, Android">
-    <meta name="description" id="metaDesc" content="우아한테크코스에서 개발자들을 위해 디자인된 교육을 수강해보세요.">
+    <meta name="description" resourceId="metaDesc" content="우아한테크코스에서 개발자들을 위해 디자인된 교육을 수강해보세요.">
 
     <meta property="og:title" content="우아한테크코스">
-    <meta property="og:description" id="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta property="og:description" resourceId="metaOgDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta property="og:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta property="og:url" content="https://woowacourse.github.io/">
 
     <meta name="twitter:card" content="website">
     <meta name="twitter:title" content="우아한테크코스">
-    <meta name="twitter:description" id="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
+    <meta name="twitter:description" resourceId="metaTwitterDesc" content="우아한테크코스 크루 ooo의 개발 블로그">
     <meta name="twitter:image" content="images/logo/logo_thumnail_bg.jpg">
     <meta name="twitter:domain" content="https://woowacourse.github.io/">
 
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div>
-    <header id="header" class="header navbar bg-transparent no-border">
+    <header resourceId="header" class="header navbar bg-transparent no-border">
         <div class="header-container">
             <ul class="nav-left mrg-left-0">
                 <li>
@@ -46,7 +46,7 @@
                 </li>
             </ul>
             <ul class="nav-right">
-                <li id="header-user-dropdown-btn" class="user-profile dropdown no-border pointer">
+                <li resourceId="header-user-dropdown-btn" class="user-profile dropdown no-border pointer">
                     <a class="user-info-link user-dropdown-menu dropdown-toggle" data-toggle="dropdown">
                         <img class="profile-img img-fluid" src="https://avatars3.githubusercontent.com/u/46308949?s=460&v=4" alt="Brown">
                         <div class="user-info text-white">
@@ -118,7 +118,7 @@
                                     <label for="img-upload" class="pointer">
                                         <img src="https://avatars3.githubusercontent.com/u/46308949?s=460&v=4" width="117" alt="">
                                         <span class="btn btn-default display-block no-mrg-btm">Choose file</span>
-                                        <input class="d-none" type="file" name="uploadedimages0" multiple id="img-upload">
+                                        <input class="d-none" type="file" name="uploadedimages0" multiple resourceId="img-upload">
                                     </label>
                                 </div>
                             </div>
